--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   	<div id="serialNumber"> Numero de Serie: </div>
     <button id="Toggle">CANCELA NOTA</button>
     <button id="Status">LE NOTA</button>
-    <div id="target"> Readed: :</div>
+    <div id="target"> Retorno: </div>
     <div id="result"> CMD: </div>
     <div id="nota"> NOTA: </div>
     <button id="Blink">PREPARA NOTA</button>
