--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
-<html>
+<!DOCTYPE HTML>
+
+<html lang="pt-br">
   <head>
+  	<meta charset ="UTF-8">
     <title>WebUSB Demo</title>
     <script src="script.js"></script>
   </head>
   <body>
 	<button id="usbLookup">Get Serial</button>
   	<button id="Connect">Connect Device</button>
-  	<div id="serialNumber"> Numero de Serie: </div>
+  	<div id="serialNumber"> <stromg>Número de Serie: </stromg></div>
     <button id="Toggle">CANCELA NOTA</button>
     <button id="Status">LE NOTA</button>
     <div id="target"> Retorno: </div>
