--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 
 <html lang="pt-br">
   <head>
@@ -7,6 +7,9 @@
     <script src="script.js"></script>
   </head>
   <body>
+  	<h1>Avanttec Tecnologia</h1>
+
+    <h5 id="status"> </h5>
 	<button id="usbLookup">Get Serial</button>
   	<button id="Connect">Connect Device</button>
   	<div id="serialNumber"> <stromg>Número de Serie: </stromg></div>
