--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
   	<h1>Avanttec Tecnologia</h1>
 
-    <h5 id="status"> </h5>
+    <h5 id="status">DESCONECTADO</h5>
 	<button id="usbLookup">Get Serial</button>
   	<button id="Connect">Connect Device</button>
   	<div id="serialNumber"> <stromg>Número de Serie: </stromg></div>
