--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>WebUSB Demo</title>
     <script src="script.js"></script>
   </head>
-  <body>
+  <body style="background-color:DeepSkyBlue">
   	<h1>Avanttec Tecnologia</h1>
 
     <h5 id="status">DESCONECTADO</h5>
-    
+
 	<button id="usbLookup">Get Serial</button>
   	<button id="Connect">Connect Device</button>
   	<div id="serialNumber"> <stromg>Número de Serie: </stromg></div>
