--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body style="background-color:DeepSkyBlue">
   	<h1>Avanttec Tecnologia</h1>
-
+    <h3 id="DataNow"></h5>
     <h5 id="status">DESCONECTADO</h5>
 
 	<button id="usbLookup">Get Serial</button>
