--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div id="nota"> NOTA: </div>
     <button id="Blink">PREPARA NOTA</button>
     <button id="Close">Close Device</button>
+    <ul id="List">
   </body>
 </html>
 
