--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <html lang="pt-br">
   <head>
   	<meta charset ="UTF-8">
-    <title>WebUSB Demo</title>
+    <title>WebUSB Avanttec Tecnologia</title>
     <script src="script.js"></script>
   </head>
+
   <body style="background-color:DeepSkyBlue">
   	<h1>Avanttec Tecnologia</h1>
     <h3 id="DataNow"></h5>
@@ -13,15 +14,17 @@
 
 	<button id="usbLookup">Get Serial</button>
   	<button id="Connect">Connect Device</button>
-  	<div id="serialNumber"> <stromg>Número de Serie: </stromg></div>
-    <button id="Toggle">CANCELA NOTA</button>
-    <button id="Status">LE NOTA</button>
+  	<h6 id="serialNumber"> <stromg>Número de Serie: </stromg></h6>
+    <button id="Toggle">Cancela Nota</button>
+    <button id="Status">Le Nota</button>
     <div id="target"> Retorno: </div>
-    <div id="result"> CMD: </div>
-    <div id="nota"> NOTA: </div>
-    <button id="Blink">PREPARA NOTA</button>
+    <lu id="">
+	    <li id="result"> CMD: </li>
+	    <li id="nota"> Nota: </li>
+	</lu>
+    <button id="Blink">Prepara Nota</button>
     <button id="Close">Close Device</button>
-    <ul id="List">Relatório <me>Pesquisa de Satisfação</me>></ul>
+    <ul id="List">Relatório <me>Pesquisa de Satisfação</me></ul>
   </body>
 </html>
 
