--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
   </head>
 
   <body style="background-color:DeepSkyBlue">
-  	<h1>Avanttec Tecnologia</h1>
-    <h3 id="DataNow"></h5>
+  	<h1>Avanttec Tecnologia  </h1> <h4 id="DataNow"></h4> 
     <h5 id="status">DESCONECTADO</h5>
 
-	<button id="usbLookup">Get Serial</button>
+	<button id="usbLookup">Get Serial Number</button>
   	<button id="Connect">Connect Device</button>
   	<h6 id="serialNumber"> <stromg>Número de Serie: </stromg></h6>
     <button id="Toggle">Cancela Nota</button>
