--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
   	<meta charset ="UTF-8">
     <title>WebUSB Avanttec Tecnologia</title>
+    <link rel="stylesheet" type="text/css" href="layout.css"> 
     <script src="script.js"></script>
   </head>
 
