--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <html lang="pt-br">
   <head>
   	<meta charset ="UTF-8">
-    <title>WebUSB Avanttec Tecnologia</title>
+    <title>WebUSB Avanttec Tecnologia - Versao 09:18 2020/01/06 </title>
     <link rel="stylesheet" type="text/css" href="layout.css"> 
     <script src="script.js"></script>
   </head>
 
   <body style="background-color:DeepSkyBlue">
-  	<h1>Avanttec Tecnologia  </h1> <h4 id="DataNow"></h4> 
+  	<h1 >Avanttec Tecnologia </h1> 
+  	<h4 id="DataNow"></h4> 
     <h5 id="status">DESCONECTADO</h5>
 
 	<button id="usbLookup">Get Serial Number</button>
